Add some modules
-add modules with index 'w';
- add modules #4,5,6

--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>js-module-1</title>
-</head>
-<body>
-    
+  </head>
+  <body>
+    <ul id="menu" class="menu">
+      <li class="menu-item">home</li>
+      <li class="menu-item">about</li>
+      <li class="menu-item">gallery</li>
+      <li>blog</li>
+    </ul>
 
+    <article class="article">
+      <h2>Article title</h2>
+    </article>
 
-
-    
-<!-- <script src="./js/module-1.js"></script> -->
-<!-- <script src="./js/module-2.js"></script> -->
-<!-- <script src="./js/itrepetitor.js"></script> -->
-<script src="./js/module-3.js"></script>
-
-
-
-</body>
+    <!-- <script src="./js/itrepetitor.js" type="module"></script> -->
+    <!-- <script src="./js/module-1.js" type="module"></script> -->
+    <!-- <script src="./js/module-1w.js" type="module"></script> -->
+    <!-- <script src="./js/module-2.js" type="module"></script> -->
+    <!-- <script src="./js/module-2w.js" type="module"></script> -->
+    <!-- <script src="./js/module-3.js" type="module"></script> -->
+    <!-- <script src="./js/module-3w.js" type="module"></script> -->
+    <!-- <script src="./js/module-4.js" type="module"></script> -->
+    <!-- <script src="./js/module-5.js" type="module"></script>  -->
+    <script src="./js/module-6.js" type="module"></script>
+  </body>
 </html>
